--- a/SmartMoveWebApp/SmartMoveWebApp.csproj
+++ b/SmartMoveWebApp/SmartMoveWebApp.csproj
@@ -45,10 +45,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -148,10 +156,67 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Customer.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CustomerCreditCard.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CustomerRating.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Login.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Order.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrderBid.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrderImage.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrderPayment.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmartMoveModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SmartMoveModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SmartMoveModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SmartMoveModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SmartMoveModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Truck.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TruckOwner.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TruckOwnerCreditCard.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TruckOwnerRating.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TruckType.cs">
+      <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -192,6 +257,16 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="SmartMoveModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>SmartMoveModel.Context.cs</LastGenOutput>
+      <DependentUpon>SmartMoveModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="SmartMoveModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>SmartMoveModel.edmx</DependentUpon>
+      <LastGenOutput>SmartMoveModel.cs</LastGenOutput>
+    </Content>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -206,6 +281,13 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <EntityDeploy Include="SmartMoveModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>SmartMoveModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="SmartMoveModel.edmx.diagram">
+      <DependentUpon>SmartMoveModel.edmx</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -223,6 +305,9 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
