--- a/SmartMoveWebApp/SmartMoveWebApp.csproj
+++ b/SmartMoveWebApp/SmartMoveWebApp.csproj
@@ -292,7 +292,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
-    <Content Include="Content\images\404.png" />
+    <Content Include="Content\images\about-us.jpg" />
     <Content Include="Content\images\article\arti-thumb-1.jpg" />
     <Content Include="Content\images\article\arti-thumb-2.jpg" />
     <Content Include="Content\images\article\arti-thumb-3.jpg" />
@@ -320,39 +320,16 @@
     <Content Include="Content\images\Logo_SmartMove.PNG" />
     <Content Include="Content\images\mobile-app.png" />
     <Content Include="Content\images\page-title.jpg" />
-    <Content Include="Content\images\partner\partner-logo-1.png" />
-    <Content Include="Content\images\partner\partner-logo-2.png" />
-    <Content Include="Content\images\partner\partner-logo-3.png" />
-    <Content Include="Content\images\partner\partner-logo-4.png" />
-    <Content Include="Content\images\partner\partner-logo-5.png" />
     <Content Include="Content\images\preloader.gif" />
-    <Content Include="Content\images\pricing-bg.jpg" />
     <Content Include="Content\images\scroll-top.png" />
     <Content Include="Content\images\services\Select_deal.png" />
     <Content Include="Content\images\services\Select_destination.png" />
     <Content Include="Content\images\services\service-icon-1.png" />
-    <Content Include="Content\images\services\service-icon-2.png" />
-    <Content Include="Content\images\services\service-icon-3.png" />
-    <Content Include="Content\images\services\service-icon-4.png" />
     <Content Include="Content\images\services\service-icon-5.png" />
-    <Content Include="Content\images\services\service-icon-6.png" />
     <Content Include="Content\images\services\Side_Menu.png" />
     <Content Include="Content\images\services\User_Profile.png" />
-    <Content Include="Content\images\slider-img\slider-img-1.jpg" />
-    <Content Include="Content\images\slider-img\slider-img-2.jpg" />
-    <Content Include="Content\images\slider-img\slider-img-3.jpg" />
-    <Content Include="Content\images\slider-img\slider-img-4.jpg" />
-    <Content Include="Content\images\team\team-mem-1.png" />
     <Content Include="Content\images\team\team-mem-2.png" />
-    <Content Include="Content\images\team\team-mem-3.png" />
-    <Content Include="Content\images\team\team-mem-4.png" />
-    <Content Include="Content\images\team\team-mem-thumb-1.png" />
     <Content Include="Content\images\team\team-mem-thumb-2.png" />
-    <Content Include="Content\images\team\team-mem-thumb-3.png" />
-    <Content Include="Content\images\team\team-mem-thumb-4.png" />
-    <Content Include="Content\images\we-do\service1-img.png" />
-    <Content Include="Content\images\we-do\service2-img.png" />
-    <Content Include="Content\images\we-do\service3-img.png" />
     <Content Include="Content\plugins\animate.css" />
     <Content Include="Content\plugins\gijgo.css" />
     <Content Include="Content\plugins\magnific-popup.css" />
@@ -438,10 +415,14 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Register.cshtml" />
     <Content Include="Views\Customers\VerifyEmail.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Customers\MyTrips.cshtml" />
+    <Content Include="Views\Shared\_UsersLayout.cshtml" />
+    <Content Include="Views\Customers\Dashboard.cshtml" />
+    <Content Include="Views\Customers\Payment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\DriverImages\" />
     <Folder Include="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
