--- a/SmartMoveWebApp/Web.config
+++ b/SmartMoveWebApp/Web.config
@@ -93,7 +93,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SmartMoveEntities" connectionString="metadata=res://*/SmartMoveModel.csdl|res://*/SmartMoveModel.ssdl|res://*/SmartMoveModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-5P23A3N\SQLEXPRESS;initial catalog=SmartMove;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SmartMoveEntities" connectionString="metadata=res://*/SmartMoveModel.csdl|res://*/SmartMoveModel.ssdl|res://*/SmartMoveModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-L7P9A48;initial catalog=SmartMove;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
