--- a/SmartMoveWebApp/SmartMoveWebApp.csproj
+++ b/SmartMoveWebApp/SmartMoveWebApp.csproj
@@ -302,6 +302,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\customerProfilePictures\default-profile-picture.png" />
+    <Content Include="Content\driverProfilePictures\default-profile-picture.png" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\images\about-us.jpg" />
     <Content Include="Content\images\banners\Android-app-Banner.jpg" />
