--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/SmartMoveWebApp/Content/driverProfilePictures/4_ksoni004@gmail.com_PP.jpg
