--- a/SmartMoveWebApp/Web.config
+++ b/SmartMoveWebApp/Web.config
@@ -15,8 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"></customErrors>
     <authentication mode="Forms">
-      <forms loginUrl="~/Home/Login" timeout="2880" />
+      <forms loginUrl="~/Home/Login" timeout="2880" cookieless="UseCookies" />
     </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
