--- a/SmartMoveWebApp/SmartMoveWebApp.csproj
+++ b/SmartMoveWebApp/SmartMoveWebApp.csproj
@@ -241,6 +241,7 @@
     <Compile Include="Models\CheckCustomerAuthorization.cs" />
     <Compile Include="Models\CheckDriverAuthorization.cs" />
     <Compile Include="Models\PartialClasses.cs" />
+    <Compile Include="Models\ViewModels\ContactUsEmailViewModel.cs" />
     <Compile Include="Models\ViewModels\EditCustomerProfileViewModel.cs" />
     <Compile Include="Models\ViewModels\EditDriverProfileViewModel.cs" />
     <Compile Include="Models\ViewModels\ErrorPageViewModel.cs" />
@@ -296,6 +297,13 @@
     </Compile>
     <Compile Include="TruckType.cs">
       <DependentUpon>SmartMoveModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Views\EmailTemplates\VerifyEmail.aspx.cs">
+      <DependentUpon>VerifyEmail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\EmailTemplates\VerifyEmail.aspx.designer.cs">
+      <DependentUpon>VerifyEmail.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -380,6 +388,8 @@
       <DependentUpon>SmartMoveModel.edmx</DependentUpon>
       <LastGenOutput>SmartMoveModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Views\EmailTemplates\ResetPasswordEmailTemplate.html" />
+    <Content Include="Views\EmailTemplates\VerifyEmail.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
